# invest-masters

./: Cargo.toml  README.md
src/: api.rs  cli.rs  ds.rs  error.rs  evaluate.rs  financial.rs  lib.rs  llm.rs  main.rs  master.rs  masters.rs  ticker.rs  utils.rs
src/api/: info.rs  masters.rs
src/cli/: evaluate.rs  info.rs  llm.rs  masters.rs
src/cli/llm/: config.rs  test.rs
src/data/: daily.rs  stock.rs
src/ds/: aktools.rs  utils.rs
src/financial/: stock.rs
src/llm/: provider.rs
src/llm/provider/: open_ai.rs
src/master/: benjamin_graham.rs  peter_lynch.rs  warren_buffett.rs
src/utils/: datetime.rs  fs.rs  markdown.rs  net.rs  stats.rs
