[package]
name = "invmst"
version = "0.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "unicode"] }
colored = "3.0.0"
env_logger = "0.11.8"
log = "0.4.27"
strum = { version = "0.27.1", features = ["derive"] }
tabled = "0.19.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }

[lints.clippy]
collapsible_if = "allow"
collapsible_else_if = "allow"
literal_string_with_formatting_args = "allow"

[profile.release]
lto = true
